syntax = "proto3";

option java_package = "com.dd.protobuf"; 
option java_outer_classname = "GateProtocol";

message CSInnerServerRegister
{	
	int32 sid     = 1; //服务器ID
	int32 type    = 2;
	string name   = 3;
}

message SCInnerServerRegister
{	
	int32   sid        = 1;
	string  udpIp      = 2;
	int32   udpPort    = 3;
}